# oboron-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: features.yml  publish-pypi.yml  tests.yml  wasm.yml
cli-tests/: Cargo.toml  README.md
cli-tests/tests/: legacy_cli_tests.rs  legacy_vector_tests.rs  ob_tests.rs  obz_tests.rs  secure_scheme_cli_tests.rs  ztier_cli_tests.rs
cli-tests/tests/vectors/: legacy-test-vectors.jsonl
ob-cli-tests/: Cargo.toml  README.md
ob-cli-tests/tests/: legacy_vector_tests.rs  ob_tests.rs  obz_tests.rs  vector_tests.rs  ztier_vector_tests.rs
oboron/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  NON_SECURITY_USE_CASES.md  README.md  README_FEATURES.md  Z_TIER.md
oboron-cli/: CHANGELOG.md  CLI_HELP.md  Cargo.toml  README.md  pyproject.toml
oboron-cli/src/: completions.rs  config.rs  main.rs  obz_completions.rs  obz_config.rs  obz_main.rs
oboron-cli/tests/: integration_tests.rs
oboron-py/: Cargo.toml  README.md  TODO  pyproject.toml
oboron-py/python/oboron/: __init__.py  _oboron.pyi  formats.py  test_inheritance.py  ztier.py
oboron-py/src/: lib.rs
oboron/benches/: aags_b32.rs  aags_b64.rs  aags_c32.rs  aags_hex.rs  aasv_b32.rs  aasv_b64.rs  aasv_c32.rs  aasv_hex.rs  adgs_b32.rs  adgs_b64.rs  adgs_c32.rs  adgs_hex.rs  adsv_b32.rs  adsv_b64.rs  adsv_c32.rs  adsv_hex.rs  apgs_b32.rs  apgs_b64.rs  apgs_c32.rs  apgs_hex.rs  apsv_b32.rs  apsv_b64.rs  apsv_c32.rs  apsv_hex.rs  benchmarks.jsonl  benchmarks_aags_b32.jsonl  benchmarks_aags_b64.jsonl  benchmarks_aags_c32.jsonl  benchmarks_aags_hex.jsonl  benchmarks_aasv_b32.jsonl  benchmarks_aasv_b64.jsonl  benchmarks_aasv_c32.jsonl  benchmarks_aasv_hex.jsonl  benchmarks_adgs_b32.jsonl  benchmarks_adgs_b64.jsonl  benchmarks_adgs_c32.jsonl  benchmarks_adgs_hex.jsonl  benchmarks_adsv_b32.jsonl  benchmarks_adsv_b64.jsonl  benchmarks_adsv_c32.jsonl  (+113 more)
oboron/src/: base32.rs  codec.rs  constants.rs  dec.rs  dec_auto.rs  enc.rs  encoding.rs  error.rs  format.rs  keychain.rs  keygen.rs  legacy.rs  lib.rs  masterkey.rs  ob.rs  ob_core.rs  ob_flex.rs  ob_multi.rs  oboron.rs  omnib.rs  scheme.rs
oboron/src/obcrypt/: aags.rs  aasv.rs  adgs.rs  adsv.rs  apgs.rs  apsv.rs  constants.rs  keychain.rs  keygen.rs  legacy.rs  mock1.rs  mock2.rs  mod.rs  ob00.rs  ob01.rs  ob21p.rs  ob31.rs  ob31p.rs  ob32.rs  ob32p.rs  ob70.rs  ob71.rs  tdi.rs  tdr.rs  upbc.rs  upc.rs  zdc.rs  zrbcx.rs
oboron/src/ztier/: dec_auto.rs  legacy.rs  mod.rs  obz.rs  omnibz.rs  omniz.rs  oz.rs  zcodec.rs  zdec_auto.rs  zkeychain.rs  zmock1.rs  zrbcx.rs
oboron/tests/: basic_tests.rs  feature_gate_tests.rs  integration_tests.rs  legacy-test-vectors.jsonl  legacy_test_vectors.rs  legacy_tests.rs  test-vectors.jsonl  test_mock1.rs  test_mock2.rs  test_ob.rs  test_ob70.rs  test_ob71.rs  test_schemes.rs  test_tdi.rs  test_tdr.rs  test_vectors.rs  ztier-test-vectors.jsonl
