[package]
name = "ob-cli-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["aags", "aasv", "apgs", "apsv", "upbc", "ztier"]
aags = []
aasv = []
apgs = []
apsv = []
upbc = []
ztier = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
