[package]
name = "oboron-cli"
version = "0.4.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Bojan Đuričković"]
license = "MIT"
repository = "https://github.com/ob-enc/oboron-rs"
description = "CLI tool for Oboron - general purpose encryption and encoding library"
keywords = ["cli", "encryption", "obfuscation", "encoding", "base32"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[features]
default = ["all-schemes"]

legacy = ["oboron/legacy"]
zdc = ["oboron/zdc"]
adgs = ["oboron/adgs"]
adsv = ["oboron/adsv"]
upc = ["oboron/upc"]
apgs = ["oboron/apgs"]
apsv = ["oboron/apsv"]
mock = ["oboron/mock"]

# Scheme categories
# =================
ob0x = ["zdc"] # insecure, not authenticated
ob1x = []  # insecure, authenticated
ob2x = ["upc"]  # secure, not authenticated
ob3x = ["adgs", "apgs", "adsv", "apsv"]  # secure, authenticated
ob7x = ["mock"]  # testing
insecure-schemes = ["ob0x", "ob1x"]
secure-schemes = ["ob2x", "ob3x"]
authenticated-schemes = ["ob3x"]
deterministic-schemes = ["zdc", "adgs", "adsv"]
probabilistic-schemes = ["upc", "apgs", "apsv"]
all-schemes = ["ob0x", "ob1x", "ob2x", "ob3x"]

[[bin]]
name = "ob"
path = "src/main.rs"

[dependencies]
oboron = { version = "0.4", path = "../oboron", features=["keyless"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
data-encoding = "2.6"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
clap-markdown = "0.1.5"
