[package]
name = "oboron-cli"
version = "1.0.0-beta.5"
edition = "2021"
rust-version = "1.74.0"
authors = ["Bojan Đuričković"]
license = "MIT"
repository = "https://github.com/ob-enc/oboron-rs"
description = "CLI tool for Oboron - general purpose encryption and encoding library"
keywords = ["cli", "encryption", "obfuscation", "encoding", "base32"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[features]
default = ["all-schemes"]

legacy = ["oboron/legacy"]
zrbcx = ["oboron/zrbcx"]
zmock = ["oboron/zmock"]
aags = ["oboron/aags"]
aasv = ["oboron/aasv"]
upbc = ["oboron/upbc"]
apgs = ["oboron/apgs"]
apsv = ["oboron/apsv"]
mock = ["oboron/mock"]

# Scheme categories
# =================
atier = ["aags", "apgs", "aasv", "apsv", "oboron/atier"]  # secure, authenticated
utier = ["upbc", "oboron/utier"]  # secure, not authenticated
ztier = ["zrbcx", "zmock", "legacy", "oboron/ztier"]
secure-schemes = ["atier", "utier"]
authenticated-schemes = ["atier"]
deterministic-schemes = ["aags", "aasv"]
probabilistic-schemes = ["apgs", "apsv", "upbc"]
all-schemes = ["atier", "utier", "ztier"]

[[bin]]
name = "ob"
path = "src/main.rs"

[dependencies]
oboron = { version = "1.0.0-beta.5", path = "../oboron", features=["keyless"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
data-encoding = "2.6"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
clap-markdown = "0.1.5"
