[package]
name = "oboron-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["Bojan Đuričković"]
license = "MIT"
repository = "https://github.com/ob-enc/oboron-rs"
description = "CLI tool for Oboron - general purpose encryption and encoding library"
keywords = ["cli", "encryption", "obfuscation", "encoding", "base32"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
homepage = "https://oboron.org/"
documentation = "https://oboron.org/cli-spec"
exclude = ["tests/", ".github/"]

[features]
default = ["all-schemes"]

legacy = ["oboron/legacy"]
zrbcx = ["oboron/zrbcx"]
zmock = ["oboron/zmock"]
aags = ["oboron/aags"]
aasv = ["oboron/aasv"]
upbc = ["oboron/upbc"]
apgs = ["oboron/apgs"]
apsv = ["oboron/apsv"]
mock = ["oboron/mock"]

# Scheme categories
atier = ["aags", "apgs", "aasv", "apsv", "oboron/atier"]
utier = ["upbc", "oboron/utier"]
ztier = ["zrbcx", "zmock", "legacy", "oboron/ztier"]
secure-schemes = ["atier", "utier"]
authenticated-schemes = ["atier"]
deterministic-schemes = ["aags", "aasv"]
probabilistic-schemes = ["apgs", "apsv", "upbc"]
all-schemes = ["atier", "utier", "ztier"]

[[bin]]
name = "ob"
path = "src/main.rs"

[[bin]]
name = "obz"
path = "src/obz_main.rs"
required-features = ["ztier"]

[dependencies]
oboron = { version = "0.7.0", features=["keyless"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
data-encoding.workspace = true
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
clap-markdown = "0.1.5"
