[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oboron-cli"
dynamic = ["version"]
requires-python = ">=3.8"
description = "CLI tool for Oboron - general purpose encryption and encoding library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bojan Đuričković" }
]
keywords = ["cli", "encryption", "obfuscation", "encoding", "base32"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://www.oboron.org/"
Repository = "https://github.com/ob-enc/oboron-rs"
Documentation = "https://github.com/ob-enc/oboron-rs/tree/master/oboron-cli"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
include = [{ path = "LICENSE", format = "sdist" }]
