[package]
name = "oboron-py"
version = "0.4.0"
edition = "2021"

[lib]
name = "_oboron"
crate-type = ["cdylib"]

[features]
default = ["all-schemes", "legacy", "keyless", "legacy", "mock"]

legacy = ["oboron/legacy"]
zdc = ["oboron/zdc"]
adgs = ["oboron/adgs"]
adsv = ["oboron/adsv"]
upc = ["oboron/upc"]
apgs = ["oboron/apgs"]
apsv = ["oboron/apsv"]
mock = ["oboron/mock"]
all-schemes = ["zdc", "upc", "adgs", "apgs", "adsv", "apsv"]

keyless = ["oboron/keyless"]

[dependencies]
oboron = { version = "0.4", path = "../oboron", default-features = false, features=["full"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
hex = "0.4"

