[package]
name = "oboron-py"
version = "1.0.0-rc.1"
edition = "2021"

[lib]
name = "_oboron"
crate-type = ["cdylib"]

[features]
default = ["all-schemes", "legacy", "keyless", "legacy", "mock"]

legacy = ["oboron/legacy"]
zrbcx = ["oboron/zrbcx"]
aags = ["oboron/aags"]
aasv = ["oboron/aasv"]
upbc = ["oboron/upbc"]
apgs = ["oboron/apgs"]
apsv = ["oboron/apsv"]
mock = ["oboron/mock"]
all-schemes = ["zrbcx", "upbc", "aags", "apgs", "aasv", "apsv"]

keyless = ["oboron/keyless"]

[dependencies]
oboron = { version = "1.0.0-rc.1", path = "../oboron", default-features = false, features=["full"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
hex = "0.4"

